assets/styles/main.css
@import url('reset.css');
@import url('global.css');

/* ====== header ====== */
.header {
  width: 100%;
  height: 80px;
  display: flex;
  align-items: center;
  position: fixed;
  background-color: var(--surface-color);
  box-shadow: 0 1px 2px var(--shadow-color);
}

.header__toggle {display: none;}

.header__logo {flex: 1;}

.navbar {
  flex: 3;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navbar .menu {
  display: flex;
  align-items: center;
  gap: 2rem;
}

.menu .menu__link {
  color: var(--primary-color);
  font-weight: var(--fw-medium);
  transition: 0.3s ease-in-out;
}

.menu .menu__link:hover {color: var(--accent-color);}

.header__icon-container {margin-left: 2.5rem;}

/* ====== main ====== */
.main-content {padding-top: 5rem;}

/* ====== sections ====== */
.about,
.jobs__content {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

/* ====== section about ====== */
.about {max-height: 100vh;}

.about__content {padding-bottom: 5rem;}

.about__metrics {
  display: flex;
  gap: 2rem;
}

.metrics__item {
  text-align: left;
  flex: 1;
}

.metrics__item .metrics__value {
  color: var(--accent-color);
  font-size: var(--fs-display);
  font-weight: var(--fw-bold);
  line-height: var(--lh-display);
  letter-spacing: -2%;
}

.metrics__item .metrics__label {
  color: var(--secondary-color);
  font-size: var(--fs-regular);
  font-weight: var(--fw-medium);
  line-height: var(--lh-regular);
}

.metrics__item .metrics__text {
  font-size: var(--fs-base);
  font-weight: var(--fs-regular);
}

/* ====== section jobst ====== */
.badge {
  color: var(--accent-color);
  font-size: var(--fs-small);
  line-height: var(--lh-small);
  font-weight: var(--fw-medium);
  padding: 0.25rem 0.75rem;
  border-radius: 1.563rem;
  margin-bottom: 1rem;
  background-color: var(--bg-subtitle-color);
}

.image {padding: 4rem 0;}

.jobs__container {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
}

.cards {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.card {
  border-radius: 1rem;
  padding: 1.5rem;
  border: 1px solid var(--border-color);
}

.card__list {
  display: flex;
  gap: 1.5rem;
}

.card__list .card__item {
  color: var(--primary-color);
  font-weight: var(--fw-medium);
  line-height: var(--lh-base);
}

/* ====== testimonials ====== */
.testimonials {
  padding: 4rem;
  border-radius: 1rem;
  text-align: center;
  background-color: var(--bg-section-color);
}

.testimonials > p {
  color: var(--secondary-color);
  font-size: var(--fs-large);
  font-weight: var(--fw-medium);
  line-height: var(--lh-large);
  letter-spacing: -2%;
  padding-bottom: 2rem;
}

.testimonial__name {
  color: var(--secondary-color);
  font-weight: var(--fw-medium);
  padding-top: 1rem;
}

.testimonial__role {
  font-size: var(--fs-small);
  font-weight: var(--fw-regular);
}

/* ====== footer ====== */
.footer {background-color: var(--bg-color);}

.footer__content {
  padding: 5rem 1rem;
  text-align: center;
}

.form {margin: 2rem;}

.form .input {
  padding: 0.75rem 1rem;
  font-size: var(--fs-base);
  border-radius: 0.5rem;
  margin: 0 1rem 1rem 0;
}

.copyright p {
  font-size: 1rem;
  font-weight: var(--fw-regular);
}

/* ====== media queries ====== */
@media (min-width: 992px) {
  .header,
  .footer {padding: 1.125rem 5rem;}

  .main-content {padding: 6rem 5rem;}

  .about__content {width: 70%;}
  
  .jobs__container {
    width: 50%;
    margin: 0 auto;
  }

  .form .input {width: 360px;}
}

@media (max-width: 992px) {
  .about__metrics {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .metrics__item {
    flex: 1 1 calc(50% - 1rem); 
    max-width: calc(50% - 1rem);
  }
}

@media (max-width: 876px) {
  .header__toggle {display: block;}

  .header__logo {text-align: center;}

  .navbar {
    position: fixed;
    width: 100%;
    height: 100%;
    left: -100%;
    top: 80px;
    gap: 2rem;
    padding-top: 3rem;
    flex-direction: column;
    justify-content: flex-start;
    transition: all 0.5s ease;
    background-color: var(--surface-color);
    z-index: 100;
  }

  .navbar.active {left: 0;}

  .menu {
    width: 100%;
    flex-direction: column;
  }

  .testimonials {padding: 4rem 1rem;}
}

@media (max-width: 540px) {
  .about__metrics {
    flex-direction: column;
  }

  .metrics__item {
    flex: 1 1 100%;
    max-width: 100%;
  }
}

